<resources>
    <string name="app_name">DayPlannerApplication</string>

    <string name="task_start_time_content_default">14:00</string>
    <string name="task_end_time_content_default">15:00</string>
    <string name="task_date_content_default">01.01.2021</string>
    <string name="task_time_content_default">14:00–15:00</string>
    <string name="task_name_content_default">Поход в магазин</string>
    <string name="task_desc_content_default">Купить: Батон, Хлеб, Молоко</string>

    <string name="title_activity_add_task">AddTaskActivity</string>

    <string name="fab_content_description">fab</string>

    <string name="tittle_name_task">Название</string>
    <string name="help_tittle_name_task">Название запланированной задачи</string>
    <string name="tittle_description_task">Описание</string>
    <string name="help_tittle_description_task">Описание запланированной задачи</string>
    <string name="text_message_text_view">Нет задач</string>
    <string name="text_button_save">Сохранить</string>
    <string name="text_button_change">Изменить</string>
    <string name="text_button_delete">Удалить</string>

    <string name="realm_name">DayPlannerProject</string>

</resources>