<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailTaskActivity">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_date_content_default"
        android:layout_margin="@dimen/text_view_margin"
        app:layout_constraintBottom_toTopOf="@id/timeTextView"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_time_content_default"
        android:layout_margin="@dimen/text_view_margin"
        app:layout_constraintTop_toBottomOf="@id/dateTextView" />
    <TextView
        android:id="@+id/nameTaskTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name_content_default"
        android:layout_margin="@dimen/text_view_margin"
        app:layout_constraintTop_toBottomOf="@id/timeTextView" />
    <TextView
        android:id="@+id/descTaskTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_desc_content_default"
        android:layout_margin="@dimen/text_view_margin"
        app:layout_constraintTop_toBottomOf="@id/nameTaskTextView" />

    <Button
        android:id="@+id/changeTaskButton"
        android:layout_width="@dimen/button_weight"
        android:layout_height="wrap_content"
        android:text="@string/text_button_change"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintBottom_toTopOf="@id/deleteTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/deleteTaskButton"
        android:layout_width="@dimen/button_weight"
        android:layout_height="wrap_content"
        android:text="@string/text_button_delete"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>