<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <TextView
        android:id="@+id/taskStartTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_start_time_content_default"
        android:layout_marginStart="@dimen/task_item_margin"
        app:layout_constraintBottom_toTopOf="@id/taskEndTimeTextView"
        app:layout_constraintEnd_toStartOf="@id/taskNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskEndTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/task_item_margin"
        android:text="@string/task_end_time_content_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskStartTimeTextView" />

    <TextView
        android:id="@+id/taskNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/task_item_margin"
        android:text="@string/task_name_content_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskStartTimeTextView"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>